--- a/SpaClient/src/app/nav/nav.component.html
+++ b/SpaClient/src/app/nav/nav.component.html
@@ -30,8 +30,10 @@
 
     <div class="navbar-nav mr-0">
       <li class="nav-item dropdown" dropdown *ngIf="isAuthenticated">
+        
         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" dropdownToggle>
-          {{fullName}}
+          <img [src]="authService.avatar" alt="">
+          <span>{{fullName}}</span>
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown" *dropdownMenu>
           <a class="dropdown-item" [routerLink]="['/account']">Account Settings</a>
