Implemented Project updating

--- a/SpaClient/src/app/projects/project-detail/project-detail.component.css
+++ b/SpaClient/src/app/projects/project-detail/project-detail.component.css
@@ -20,6 +20,14 @@ h3 {
   transition-duration: 200ms;
 }
 
+#project-dates {
+  margin-bottom: 12px;
+}
+
+#start-date {
+  padding-left: 5px;
+}
+
 .inner-addon {
   position: relative;
 }
