--- a/SpaClient/src/app/your-work/your-work.component.html
+++ b/SpaClient/src/app/your-work/your-work.component.html
@@ -7,7 +7,7 @@
     <div class="card-body">
       <h5 class="card-title">{{project.name}}</h5>
       <h6 class="card-subtitle mb-2 text-muted">Created by: {{project.createdByFullName}}</h6>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <p class="card-text">{{project.description}}</p>
       <a [routerLink]="['/projects', project.id]" class="card-link">Go to project page</a>
     </div>
   </div>
