Implemented Issue updating

--- a/SpaClient/src/app/projects/issues/issue-detail/issue-detail.component.css
+++ b/SpaClient/src/app/projects/issues/issue-detail/issue-detail.component.css
@@ -145,3 +145,11 @@ h3 {
 td .btn {
   padding: 6px 10px;
 }
+
+.fa-select {
+  font-family: 'FontAwesome', -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";;
+}
+
+#priority-row {
+  margin-bottom: 12px;
+}
