--- a/IdentityServer/Views/Auth/Register.cshtml
+++ b/IdentityServer/Views/Auth/Register.cshtml
@@ -23,7 +23,7 @@
             <input asp-for="ConfirmPassword" type="password" class="form-control" />
         </div>
         <div class="form-row">
-            <button type="submit" class="btn btn-primary btn-block">Sign In</button>
+            <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
         </div>
         <div class="form-row">
             <p>
