--- a/SpaClient/src/app/projects/issues/issue-detail/issue-detail.component.html
+++ b/SpaClient/src/app/projects/issues/issue-detail/issue-detail.component.html
@@ -26,7 +26,7 @@
             <a class="dropdown-item" (click)="showModal(editIssueModal)">Edit</a>
           </li>
           <li role="menuitem">
-            <a class="dropdown-item">Delete</a>
+            <a class="dropdown-item" (click)="delete('issue', issue.id)">Delete</a>
           </li>
         </ul>
       </div>
@@ -73,6 +73,7 @@
         </div>
       </div>
     </div>
+    
     <!-- Description -->
     <div class="row">
       <div class="col-md-12">
@@ -80,6 +81,59 @@
         <p>{{issue.description}}</p>
       </div>
     </div>
+
+    <!-- Comments -->
+    <div class="row" id="comments">
+      <div class="col-md-12">
+        <h6>Comments</h6>
+        <!-- Comments insert div -->
+        <div class="row">
+          <!-- Avatar or initials -->
+          <div class="col-md-1">
+            <img [src]="authService.avatar" id="comment-avatar">
+          </div>
+          <!-- Textarea -->
+          <div class="col-md-11">
+            <textarea 
+              (focus)="initializeCreateComment()"
+              rows="{{typingComment ? 6 : 1}}"
+              class="form-control"
+              [(ngModel)]="newCommentText"
+              placeholder="Write a comment..."></textarea>
+            <button class="btn btn-primary" *ngIf="typingComment" (click)="createComment()">Save</button>  
+            <button class="btn btn-default" *ngIf="typingComment" (click)="typingComment = false">Cancel</button>  
+          </div>
+        </div>
+
+        <!-- Comments preview div -->
+        <div class="row comment" *ngFor="let comment of issue.comments">
+          <div class="col-md-1">
+            <img [src]="'http://localhost:5002/' + comment.createdBy.avatar" id="comment-avatar">
+          </div>
+          <div class="col-md-11">
+            <p class="comment-header">
+              <span class="comment-fullName">{{comment.createdBy.fullName}}</span>
+              <span class="comment-time">{{comment.createdAt | timeAgo}}</span>
+            </p>
+            <p>
+              <span *ngIf="!comment.editMode">{{comment.text}}</span>
+              <textarea 
+                *ngIf="comment.editMode"
+                rows="4"
+                class="form-control"
+                [(ngModel)]="editCommentText"></textarea>
+              <button class="btn btn-primary" *ngIf="comment.editMode" (click)="updateComment(comment)">Save</button>  
+              <button class="btn btn-default" *ngIf="comment.editMode" (click)="comment.editMode = false">Cancel</button> 
+            </p>
+            <div class="comment-footer" *ngIf="comment.createdBy.id === authService.userId && !comment.editMode">
+              <a class="comment-action" (click)="editComment(comment)">Edit</a> &middot;
+              <a class="comment-action" (click)="delete('comment', comment.id)">Delete</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
   
   <!-- Right column -->
@@ -299,6 +353,27 @@
           </div>
           <button class="btn btn-outline-success btn-block" type="submit">Submit</button>
         </form>
+      </div>
+    </div>
+  </div>   
+</div>
+
+<!-- Delete Modal -->
+<div class="modal fade" 
+     bsModal 
+     #deleteModal="bs-modal">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title pull-left">Delete {{deleteType}}</h5>
+        <button type="button" class="close pull-right" aria-label="Close" (click)="hideModal(deleteModal)">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body text-center">
+        <p>Are you sure you want to delete this {{deleteType}}?</p>
+        <button type="button" class="btn btn-outline-danger" (click)="confirmDelete()">Yes</button>
+        <button type="button" class="btn btn-default" (click)="hideModal(deleteModal)">No</button>
       </div>
     </div>
   </div>   
