Issues description previews separate paragraphs

--- a/SpaClient/src/app/projects/issues/issue-detail/issue-detail.component.css
+++ b/SpaClient/src/app/projects/issues/issue-detail/issue-detail.component.css
@@ -154,6 +154,10 @@ td .btn {
   margin-bottom: 12px;
 }
 
+#comments {
+  margin-bottom: 36px;
+}
+
 #comment-avatar {
   height: 36px;
   width: 36px;
