--- a/SpaClient/src/app/projects/issues/issue-detail/issue-detail.component.html
+++ b/SpaClient/src/app/projects/issues/issue-detail/issue-detail.component.html
@@ -86,6 +86,7 @@
     <div class="row" id="attachments">
       <div class="col-md-12">
         <h6>Attachments</h6>
+        <p *ngIf="issue.attachments.length === 0">No attachments</p>
         <div class="attachments-wrapper">
           <div class="attachment" *ngFor="let attachment of issue.attachments">
             <div class="attachment-header">
