--- a/SpaClient/src/app/your-work/your-work.component.html
+++ b/SpaClient/src/app/your-work/your-work.component.html
@@ -13,30 +13,93 @@
   </div>
 </div>
 
-<div id="tabset">
+<!-- <div id="tabset">
   <tabset>
     <tab heading="Assigned to me">
-      <h6 id="in-progress">IN PROGRESS</h6>
-      <a
-        class="issue" 
-        *ngFor="let issueInProgress of inProgress" 
-        [routerLink]="['/projects', issueInProgress.project.id, 'issues', issueInProgress.id]">
-          <div class="issue-logo">
-            <fa-icon *ngIf="issueInProgress.issueType === 'task'" [icon]="['fas', 'check-square']" size="lg" class="task"></fa-icon>
-            <fa-icon *ngIf="issueInProgress.issueType === 'bug'" [icon]="['fas', 'bug']" size="lg" class="bug"></fa-icon>
-          </div>
-          <span class="issue-content">
-            <span class="issue-name">{{issueInProgress.name}}</span>
-            <small class="issue-project">{{issueInProgress.project.name}}</small>
-          </span>
-          <span class="issue-status">In progress</span>
-      </a>
+      
+    </tab>
+    <tab heading="Starred">
+      
+    </tab>
+    <tab heading="Completed">
+      
+    </tab>
 
-      <h6 id="to-do">TO DO</h6>
-      <a 
-        class="issue" 
-        *ngFor="let issueToDo of toDo"
-        [routerLink]="['/projects', issueToDo.project.id, 'issues', issueToDo.id]">
+  </tabset>
+</div> -->
+
+<div id="tabset">
+  <ul ngbNav #nav="ngbNav" class="nav-tabs">
+    <li [ngbNavItem]="1">
+      <a ngbNavLink>
+        <fa-icon [icon]="['fas', 'list']"></fa-icon>
+        Assigned to me
+      </a>
+      <ng-template ngbNavContent>
+        <h6 id="in-progress">IN PROGRESS</h6>
+        <h6 *ngIf="inProgress.length === 0" class="no-issues-message">No issues in progress...</h6>
+        <a
+          class="issue" 
+          *ngFor="let issueInProgress of inProgress" 
+          [routerLink]="['/projects', issueInProgress.project.id, 'issues', issueInProgress.id]">
+            <div class="issue-logo">
+              <fa-icon *ngIf="issueInProgress.issueType === 'task'" [icon]="['fas', 'check-square']" size="lg" class="task"></fa-icon>
+              <fa-icon *ngIf="issueInProgress.issueType === 'bug'" [icon]="['fas', 'bug']" size="lg" class="bug"></fa-icon>
+            </div>
+            <span class="issue-content">
+              <span class="issue-name">{{issueInProgress.name}}</span>
+              <small class="issue-project">{{issueInProgress.project.name}}</small>
+            </span>
+            <span class="issue-status">In progress</span>
+        </a>
+
+        <h6 id="to-do">TO DO</h6>
+        <h6 *ngIf="toDo.length === 0" class="no-issues-message">No issues to do...</h6>
+        <a 
+          class="issue" 
+          *ngFor="let issueToDo of toDo"
+          [routerLink]="['/projects', issueToDo.project.id, 'issues', issueToDo.id]">
+            <div class="issue-logo">
+              <fa-icon *ngIf="issueToDo.issueType === 'task'" [icon]="['fas', 'check-square']" size="lg" class="task"></fa-icon>
+              <fa-icon *ngIf="issueToDo.issueType === 'bug'" [icon]="['fas', 'bug']" size="lg" class="bug"></fa-icon>
+            </div>
+            <span class="issue-content">
+              <span class="issue-name">{{issueToDo.name}}</span>
+              <small class="issue-project">{{issueToDo.project.name}}</small>
+            </span>
+            <span class="issue-status">To do</span>
+        </a>
+      </ng-template>
+    </li>
+    <li [ngbNavItem]="2">
+      <a ngbNavLink>
+        <fa-icon [icon]="['fas', 'star']"></fa-icon>
+        Starred
+      </a>
+      <ng-template ngbNavContent>
+        <h6 id="in-progress">IN PROGRESS</h6>
+        <h6 *ngIf="inProgressStarred.length === 0" class="no-issues-message">No issues in progress...</h6>
+        <a 
+          class="issue" 
+          *ngFor="let issueInProgress of inProgressStarred"
+          [routerLink]="['/projects', issueInProgress.project.id, 'issues', issueInProgress.id]">
+            <div class="issue-logo">
+              <fa-icon *ngIf="issueInProgress.issueType === 'task'" [icon]="['fas', 'check-square']" size="lg" class="task"></fa-icon>
+              <fa-icon *ngIf="issueInProgress.issueType === 'bug'" [icon]="['fas', 'bug']" size="lg" class="bug"></fa-icon>
+            </div>
+            <span class="issue-content">
+              <span class="issue-name">{{issueInProgress.name}}</span>
+              <small class="issue-project">{{issueInProgress.project.name}}</small>
+            </span>
+            <span class="issue-status">In progress</span>
+        </a>
+  
+        <h6 id="to-do">TO DO</h6>
+        <h6 *ngIf="toDoStarred.length === 0" class="no-issues-message">No issues to do...</h6>
+        <a 
+          class="issue" 
+          *ngFor="let issueToDo of toDoStarred"
+          [routerLink]="['/projects', issueToDo.project.id, 'issues', issueToDo.id]">
           <div class="issue-logo">
             <fa-icon *ngIf="issueToDo.issueType === 'task'" [icon]="['fas', 'check-square']" size="lg" class="task"></fa-icon>
             <fa-icon *ngIf="issueToDo.issueType === 'bug'" [icon]="['fas', 'bug']" size="lg" class="bug"></fa-icon>
@@ -46,58 +109,34 @@
             <small class="issue-project">{{issueToDo.project.name}}</small>
           </span>
           <span class="issue-status">To do</span>
+        </a>
+      </ng-template>
+    </li>
+    <li [ngbNavItem]="3">
+      <a ngbNavLink>
+        <fa-icon [icon]="['fas', 'check']"></fa-icon>
+        Completed
       </a>
-    </tab>
-    <tab heading="Starred">
-      <h6 id="in-progress">IN PROGRESS</h6>
-      <a 
-        class="issue" 
-        *ngFor="let issueInProgress of inProgressStarred"
-        [routerLink]="['/projects', issueInProgress.project.id, 'issues', issueInProgress.id]">
+      <ng-template ngbNavContent>
+        <h6 id="done">DONE</h6>
+        <h6 *ngIf="done.length === 0" class="no-issues-message">No completed issues...</h6>
+        <a 
+          class="issue issue-done" 
+          *ngFor="let issue of done"
+          [routerLink]="['/projects', issue.project.id, 'issues', issue.id]">
           <div class="issue-logo">
-            <fa-icon *ngIf="issueInProgress.issueType === 'task'" [icon]="['fas', 'check-square']" size="lg" class="task"></fa-icon>
-            <fa-icon *ngIf="issueInProgress.issueType === 'bug'" [icon]="['fas', 'bug']" size="lg" class="bug"></fa-icon>
+            <fa-icon *ngIf="issue.issueType === 'task'" [icon]="['fas', 'check-square']" size="lg" class="task"></fa-icon>
+            <fa-icon *ngIf="issue.issueType === 'bug'" [icon]="['fas', 'bug']" size="lg" class="bug"></fa-icon>
           </div>
           <span class="issue-content">
-            <span class="issue-name">{{issueInProgress.name}}</span>
-            <small class="issue-project">{{issueInProgress.project.name}}</small>
+            <span class="issue-name">{{issue.name}}</span>
+            <small class="issue-project">{{issue.project.name}}</small>
           </span>
-          <span class="issue-status">In progress</span>
-      </a>
-
-      <h6 id="to-do">TO DO</h6>
-      <a 
-        class="issue" 
-        *ngFor="let issueToDo of toDoStarred"
-        [routerLink]="['/projects', issueToDo.project.id, 'issues', issueToDo.id]">
-        <div class="issue-logo">
-          <fa-icon *ngIf="issueToDo.issueType === 'task'" [icon]="['fas', 'check-square']" size="lg" class="task"></fa-icon>
-          <fa-icon *ngIf="issueToDo.issueType === 'bug'" [icon]="['fas', 'bug']" size="lg" class="bug"></fa-icon>
-        </div>
-        <span class="issue-content">
-          <span class="issue-name">{{issueToDo.name}}</span>
-          <small class="issue-project">{{issueToDo.project.name}}</small>
-        </span>
-        <span class="issue-status">To do</span>
-      </a>
-    </tab>
-    <tab heading="Completed">
-      <h6 id="done">DONE</h6>
-      <a 
-        class="issue issue-done" 
-        *ngFor="let issue of done"
-        [routerLink]="['/projects', issue.project.id, 'issues', issue.id]">
-        <div class="issue-logo">
-          <fa-icon *ngIf="issue.issueType === 'task'" [icon]="['fas', 'check-square']" size="lg" class="task"></fa-icon>
-          <fa-icon *ngIf="issue.issueType === 'bug'" [icon]="['fas', 'bug']" size="lg" class="bug"></fa-icon>
-        </div>
-        <span class="issue-content">
-          <span class="issue-name">{{issue.name}}</span>
-          <small class="issue-project">{{issue.project.name}}</small>
-        </span>
-        <span class="issue-status">Done</span>
-      </a>
-    </tab>
-
-  </tabset>
+          <span class="issue-status">Done</span>
+        </a>
+      </ng-template>
+    </li>
+  </ul>
+  
+  <div [ngbNavOutlet]="nav" class="mt-2"></div>
 </div>
